# XBCI-competition

./: BCI_README.md  LICENSE  PKG-INFO  README.md  README_XBCI_EN.md  bci_cli.py  bci_motor_imagery_classifier.py  bci_motor_imagery_classifier_v2.py  offline_bci_classifier.pkl  offline_bci_classifier.py  pyproject.toml  requirements_bci.txt  run_bci_gui.bat  simple_bci_gui.py  test_scanner.py
.specstory/: UUId.py
docs/: class_func_descriptions.md
examples/: ble_scan.py  sdk_cli_monitor.py  sdk_metrics_example.py
examples/competition_files/: README.md
off_line_data/: data_000001.npy  data_000002.npy  data_000003.npy  data_000004.npy  data_000005.npy
src/ble_sdk/: __init__.py  client.py  constants.py  exceptions.py  log.py  scanner.py
src/ble_sdk/algo/: __init__.py  eeg.py  impedance.py
src/ble_sdk/handles/: battery_rssi_handler.py  eeg_handler.py  impedance_handler.py  lead_handler.py
src/ble_sdk/utils/: cache.py
tests/: __init__.py  test_battery_rssi_handler.py  test_channels.py  test_lead_handler.py
