[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ble-sdk"
version = "0.0.4"
description = "Python SDK for BLE IoT devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "vincentzhu", email = "zhuzhu2727@sohu.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = [
    "bleak>=0.22.3",
    "loguru>=0.7.3",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/username/ble-sdk"
Issues = "https://github.com/username/ble-sdk/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.hatch.build.targets.wheel]
packages = ["src/ble_sdk"]
